# binance

./: .gitignore  README.md  dev.ipynb  requirements.txt
binance/: Justfile  pyproject.toml
binance/src/binance/: __init__.py
binance/src/binance/core/: __init__.pyi  mixin.py
binance/src/binance/core/http/: auth.py  client.py
binance/src/binance/simple_earn/: __init__.py
binance/src/binance/simple_earn/fixed/: __init__.py  list.py
binance/src/binance/simple_earn/flexible/: __init__.py  list.py
binance/src/binance/wallet/: __init__.py
binance/src/binance/wallet/capital/: __init__.py  coins.py
